--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -39,3 +39,25 @@ body {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
+.map_wrapper {
+  position: relative;
+  width: 80%;
+  padding-top: 56.25%;
+  border: 1px solid black;
+  text-align: center;
+  margin: auto;
+}
+
+.map_wrapper .target {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+
+.row {
+  margin: 10px auto;
+  text-align: center;
+}
+
