--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -3,13 +3,13 @@ header {
 }
 
 .container {
-  width: 920px;
+  width: 1000px;
   margin: 0 auto 40px auto;
 }
 
 .header-title-area {
-  margin-top: 40px;
-  margin-bottom: 30px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .logo {
@@ -18,6 +18,54 @@ header {
 .text-sub {
   color: #777;
 }
+
+.header-navigation {
+  width: 100%;
+  background-color: #fff;
+  padding: 20px 0;
+}
+
+.header-navigation:after {
+  clear: both;
+  display: block;
+  content: " ";
+}
+
+.header-navigation li {
+  float: left;
+  padding: 0 30px;
+  text-align: center;
+  list-style-type: none;
+}
+
+.header-navigation li a {
+  color: #333;
+  text-decoration: none;
+}
+
+.header-navigation li a:hover {
+	background: #ccc;
+}
+
+
+
+.slider{
+    margin: 20px auto;
+    width: 80%;
+}
+.slider img{
+    height: auto;
+    width: 100%;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    color: #000;
+}
+
+
+
+
 
 // これ以下は使わないかも
 .headline {
