電光掲示板

--- a/public/css/front.css
+++ b/public/css/front.css
@@ -7,6 +7,13 @@ header {
   margin: 0 auto 40px auto;
 }
 
+.infobox {
+  height: 1300px;
+  overflow: auto;
+  border: green 1px solid;
+  background-color: #FFFFDD;
+}
+
 .header-title-area {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -22,7 +29,7 @@ header {
 
 .header-navigation {
   width: 100%;
-  background-color: #fff;
+  background-color: #FFFFDD;
   padding: 20px 0;
 }
 
@@ -45,7 +52,7 @@ header {
 }
 
 .header-navigation li a:hover {
-  background: #ccc;
+  background: #FFFF00;
 }
 
 .slider {
@@ -63,47 +70,7 @@ header {
   color: #000;
 }
 
-.headline .caption {
-  position: relative;
-  width: 350px;
-}
-
-.headline .caption .image img {
-  width: 100%;
-}
-
-.headline .caption .title {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.headline .caption .title h1 {
-  color: #fff;
-  font-size: 1.2em;
-}
-
-.headline .caption .body {
-  font-size: 0.8em;
-}
-
-.posts .post .date {
-  font-size: 0.6em;
-  color: #999999;
-}
-
-.posts .post .title {
-  font-size: 1.2em;
-  font-weight: bold;
-}
-
-.posts .post .body {
-  font-size: 0.8em;
-}
-
-.posts .post .image img {
+.image1 img {
   width: 250px;
 }
 
