--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -7,6 +7,12 @@ header {
   margin: 0 auto 40px auto;
 }
 
+.infobox {
+   height: 1300px;
+   overflow: auto;
+   border: green 1px solid;
+   background-color: #FFFFDD;
+}
 .header-title-area {
   margin-top: 20px;
   margin-bottom: 10px;
@@ -21,7 +27,7 @@ header {
 
 .header-navigation {
   width: 100%;
-  background-color: #fff;
+  background-color: #FFFFDD;
   padding: 20px 0;
 }
 
@@ -44,7 +50,7 @@ header {
 }
 
 .header-navigation li a:hover {
-	background: #ccc;
+	background: #FFFF00;
 }
 
 
@@ -63,54 +69,8 @@ header {
     color: #000;
 }
 
-
-
-
-
-// これ以下は使わないかも
-.headline {
-  .caption {
-    position: relative;
-    width: 350px;
-    .image {
-      img {
-    width: 100%;
-      }
-    }
-    .title {
-      width: 100%;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background-color: rgba(0, 0, 0, 0.6);
-      h1 {
-    color: #fff;
-    font-size: 1.2em;
-      }
-    }
-    .body {
-      font-size: 0.8em;
-    }
-  }
-}
-
-.posts {
-  .post {
-    .date {
-      font-size: 0.6em;
-      color: #999999;
-    }
-    .title {
-      font-size: 1.2em;
-      font-weight: bold;
-    }
-    .body {
-      font-size: 0.8em;
-    }
-    .image {
-      img {
+.image1 {
+    img {
     width: 250px;
-      }
-    }
   }
 }
